--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@netlify/functions": "^4.2.5",
+    "@netlify/plugin-nextjs": "^5.13.0",
     "framer-motion": "^12.23.12",
     "next": "^15.5.2",
     "nodemailer": "^7.0.6",
